# polyglot-rag

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md  commit_changes.sh  diesel.toml  dockerfile  dockerfile.build  push_to_github.sh
.github/workflows/: build.yml
dev/: local.docker-compose.yml  localstack.docker-compose.yml
dev/localstack/ready.d/: create-bucket.sh
migrations/2025-05-12-193751_create_items/: down.sql  up.sql
migrations/2025-05-13-124020_search_queries/: up.sql
migrations/2025-05-18-155230_update_to_vector_size/: down.sql  up.sql
migrations/2025-10-02-092838_create_processing_jobs/: up.sql
migrations/2025-10-04-214824_add_processing_status_to_files/: down.sql  up.sql
migrations/2026-06-07-000000_create_file_assets/: up.sql
src/: main.rs
src/application/: mod.rs
src/application/ports/: document_extractor.rs  embedding_provider.rs  file_storage.rs  job_queue.rs  mod.rs
src/application/services/: document_processor.rs  embedding_service.rs  mod.rs  search_service.rs
src/application/use_cases/: cancel_job.rs  complete_upload.rs  get_file.rs  get_file_chunks.rs  get_job_status.rs  list_files.rs  mod.rs  process_document.rs  process_text_direct.rs  process_url_direct.rs  process_youtube_direct.rs  queue_processing_job.rs  request_upload_url.rs  search_content.rs  upload_file.rs  upload_with_processing.rs
src/domain/entities/: asset.rs  content_chunk.rs  embedding.rs  mod.rs  processing_job.rs  search_query.rs
src/domain/repositories/: asset_repository.rs  auth_repository.rs  chunk_repository.rs  embedding_repository.rs  file_repository.rs  job_repository.rs  mod.rs  search_query_repository.rs
src/domain/value_objects/: file_hash.rs  (+2 more)
src/infrastructure/: container.rs  mod.rs
tests/fixtures/: sample.docx  sample.pptx  sample.txt
(+76 files in other folders)
